--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -8,17 +8,32 @@ button {
 	display:block;
 	font-size:20px;
 	background:orange;
+	margin-left:48px;
 	height:30px;
 	width:50%;
 }
 header {
 	background: #C05B26;
-       position: fixed;
+    position: fixed;
 	width:100%;
 	height:84px;
 	z-index:99999;
 }
-header img {margin:8px;}
+header #logo {
+	float:left;
+} 
+header #siteLink {
+	float:right;
+	color:#fff;
+	border:3px solid #fff;
+	text-decoration:none;
+	-webkit-border-radius: 203px;
+	-moz-border-radius: 203px;
+	border-radius: 203px;
+	padding:14px;
+	margin:14px;
+}
+
 #editor {
        position: fixed;
        top: 84px;
